[tool.poetry]
name = "object-tracking-assignment"
version = "0.1.0"
description = ""
authors = ["Sasha_Mogilevskii <mogilevskiy94@mail.ru>"]
readme = "README.md"
packages = [{include = "object_tracking_assignment"}]

[tool.poetry.dependencies]
python = "3.8.9"
fastapi = "^0.95.1"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
scipy = "^1.10.1"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
flake8 = "*"
mypy = "0.982"
pylama = "*"
pre-commit = "^3.2.1"
pytest = "^7.2.2"

[tool.black]
line-length = 100
#no-space-after-arg = true
no-space-after-closing-bracket = true
no-space-colon = true
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.env
    | \.venv
  )/
)
'''
