[tool.poetry]
name = "object-tracking-assignment"
version = "0.1.0"
description = ""
authors = ["Sasha_Mogilevskii <mogilevskiy94@mail.ru>"]
readme = "README.md"
packages = [{include = "object_tracking_assignment"}]

[tool.poetry.dependencies]
python = "3.10.7"
fastapi = "^0.95.1"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
scipy = "^1.10.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
